--- a/MS-Dynamics-BC-Webshop-Frontend/.vscode/launch.json
+++ b/MS-Dynamics-BC-Webshop-Frontend/.vscode/launch.json
@@ -6,10 +6,10 @@
             "request": "launch",
             "type": "al",
             "environmentType": "OnPrem",
-            "server": "http://bcv18-5-pr2021/",
+            "server": "http://bc-19-2/",
             "serverInstance": "BC",
             "authentication": "UserPassword",
-            "startupObjectId": 50106,
+            "startupObjectId": 9006,
             "startupObjectType": "Page",
             "breakOnError": true,
             "launchBrowser": true,
